force-app/main/default/objects/vacRep__Vacation_Replacement__c/vacRep__Vacation_Replacement__c.object-meta.xml
<CustomObject>
    <label>Vacation Replacement</label>
    <nameField>
        <displayFormat>VR-{YYYY}{0000}</displayFormat>
        <label>Replacement Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vacation Replacements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>