force-app/main/default/objects/vacRep__Vacation_Replacement__c/fields/vacRep__active__c.field-meta.xml
<CustomField>
    <fullName>vacRep__active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Defines, if this replacement should be executed</description>
    <inlineHelpText>Defines, if this replacement should be executed</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>