force-app/main/default/objects/vacRep__Vacation_Replacement__c/fields/vacRep__Enddate__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Enddate__c</fullName>
    <description>Date when the affected records should be transferred back</description>
    <inlineHelpText>Date when the affected records should be transferred back</inlineHelpText>
    <label>Enddate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>