force-app/main/default/objects/vacRep__Vacation_Replacement__c/fields/vacRep__Objects__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Objects__c</fullName>
    <description>Object that should be transferred</description>
    <inlineHelpText>Object that should be transferred</inlineHelpText>
    <label>Objects</label>
    <type>TextArea</type>
</CustomField>