force-app/main/default/objects/vacRep__Vacation_Replacement__c/fields/vacRep__Owner__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The original owner wich will be substituted by the substitute</description>
    <inlineHelpText>The original owner wich will be substituted by the substitute</inlineHelpText>
    <label>Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>substitutedBy</relationshipName>
    <type>Lookup</type>
</CustomField>