force-app/main/default/objects/vacRep__Vacation_Replacement__c/fields/vacRep__Replacement_User__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Replacement_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User wich will replace the original owner.</description>
    <inlineHelpText>User wich will replace the original owner.</inlineHelpText>
    <label>Replacement User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Vacation_Replacements</relationshipName>
    <type>Lookup</type>
</CustomField>