force-app/main/default/objects/vacRep__Vacation_Replacement__c/fields/vacRep__Startdate__c.field-meta.xml
<CustomField>
    <fullName>vacRep__Startdate__c</fullName>
    <description>Date when the replacement should be done</description>
    <inlineHelpText>Date when the replacement should be done</inlineHelpText>
    <label>Startdate</label>
    <required>true</required>
    <type>Date</type>
</CustomField>