force-app/main/default/objects/vacRep__Vacation_Replacement__c/listViews/vacRep__All_Vacation_Replacements.listView-meta.xml
<ListView>
    <fullName>vacRep__All_Vacation_Replacements</fullName>
    <columns>NAME</columns>
    <columns>vacRep__active__c</columns>
    <columns>vacRep__Startdate__c</columns>
    <columns>vacRep__Enddate__c</columns>
    <columns>vacRep__Owner__c</columns>
    <columns>vacRep__Replacement_User__c</columns>
    <columns>vacRep__Objects__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Vacation Replacements</label>
</ListView>